<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.addData.AddFragment">

    <TextView
        android:id="@+id/text_add"
        android:layout_width="246dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="338dp"
        android:layout_height="429dp"
        android:background="@drawable/button_aspect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_add"
        app:layout_constraintVertical_bias="0.183">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="25dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/text_arteriala"
                android:layout_width="222dp"
                android:layout_height="match_parent"
                android:paddingStart="20sp"
                android:paddingEnd="4sp"
                android:text="@string/arteriala"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_arteriala"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_arterial_text"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/exemple"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="25dp"
            android:paddingBottom="24dp">


        <TextView
                android:id="@+id/text_temperatura"
                android:layout_width="222dp"
                android:layout_height="match_parent"
                android:paddingStart="20sp"
                android:paddingEnd="4sp"
                android:text="@string/temperatura"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_temperatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_temperatura_text"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/exemple"
                    android:inputType="number|numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="25dp"
            android:paddingBottom="24dp">


        <TextView
                android:id="@+id/text_greutate"
                android:layout_width="222dp"
                android:layout_height="match_parent"
                android:paddingStart="20sp"
                android:paddingEnd="4sp"
                android:text="@string/greutate"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_greutate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_greutate_text"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/exemple"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="27dp">

            <TextView
                android:id="@+id/text_glicemie"
                android:layout_width="222dp"
                android:layout_height="match_parent"
                android:paddingStart="20sp"
                android:paddingEnd="4sp"
                android:text="@string/glicemie"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_glicemie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_glicemie_text"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/exemple"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="197dp"
        android:layout_height="74dp"
        android:background="@drawable/button_aspect"
        android:text="@string/salvare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.294" />

</androidx.constraintlayout.widget.ConstraintLayout>